# PyES

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  conc.csv  conc_solids.csv  delta.csv  log_beta.csv  model.csv  model_solids.csv  pyproject.toml  release_text.md  si.csv  tbump.toml
.github/workflows/: release-multi-os.yml
benchmark/: test.py
benchmark/benchmark_viz/: advanced_statistics.py  plot_histogram.py  plot_whisker.py
docs/user_manual/: user_manual.tex
docs/user_manual/img/raw/: 1.xcf  2.xcf  3.xcf  4.xcf  5.xcf  6.xcf  7.xcf  8.xcf  9.xcf  calculate.xcf  export.xcf  main.xcf  plot.xcf  settings_dist.xcf  settings_titr.xcf  species.xcf
numerical tests/monoprotic_titr/: conc.csv  delta.csv  jacobian.csv  model.csv
numerical tests/urine_dist/: jacobian.csv
requirements/: base.txt
scripts/: bump_version.sh  changelog_generator.py  compile_ui.sh  icon_creator.py  profile.sh  run_benchmark.sh
scripts/images/: icon.xcf
src/main/python/: ExportWindow.py  MainWindow.py  PlotWindow.py  PlotWindow_pyqtgraph.py  canvas.py  delegate.py  dialogs.py  main copy.py  main.py  model_proxy.py  models.py  optimizer.py  resources_rc.py  utils_func.py  workers.py
src/main/python/optimizers/: distribution.py  titration.py
src/main/python/pyes/: dialogs.py  main.py  resources_rc.py  utils_func.py  workers.py
src/main/python/ui/: PyES4_about.py  PyES4_dataExport.py  PyES4_dataExport.ui  PyES4_main.py  PyES4_main.ui  PyES4_newDialog.py  PyES4_pyqtgraphPlotExport.py  PyES4_pyqtgraphPlotExport.ui  PyES_about.py  PyES_about.ui  PyES_dataExport.py  PyES_main.py  PyES_main.ui  PyES_newDialog.py  PyES_pyqtgraphPlotExport.py  PyES_pyqtgraphPlotExport.ui  pystac_about.py  pystac_about.ui  pystac_load.py  pystac_main.py  pystac_main.ui  pystac_newDialog.py  pystac_newDialog.ui  sssc_about.py  sssc_about.ui  sssc_dataExport.py  sssc_dataExport.ui  sssc_load.py  sssc_load.ui  sssc_main.py  sssc_main.ui  sssc_newDialog.py  sssc_plotExport.py  sssc_plotExport.ui  sssc_pyqtgraphPlotExport.py  sssc_pyqtgraphPlotExport.ui
src/main/python/viewmodels/: delegate.py  model_proxy.py  models.py
src/main/python/windows/: export.py  plot.py  window.py
src/main/resources/base/: resources.qrc  resources_rc.py
tests/: test_distribution.py  test_titration.py  test_windows.py  utils.py
tests/test_data/distribution_data/ac/: ac.json
(+79 files in other folders)
