[tool.poetry]
name = "pyes"
version = "0.3.1"
description = ""
authors = ["Lorenzo Castellino <castellino96@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ppg = {git = "ssh://git@github.com/Kastakin/ppg.git", rev = "main"}
pandas = "^1.3.5"
openpyxl = "^3.0.9"
PySide6-Essentials = "^6.3.1"
pyqtgraph = "^0.13.1"

[tool.poetry.group.dev.dependencies]
tbump = "^6.7.0"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
matplotlib = "^3.6.0"
scipy = "^1.9.1"
pyinstrument = "^4.3.0"
Pillow = "^9.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
